Fixed missalign on mobile.

--- a/shared.css
+++ b/shared.css
@@ -75,8 +75,14 @@ a {
     font-size: 110%;
 }
 
+.paddedchoicebox {
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
 .interactionbox {
-    margin: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
     font-size: 90%;
 }
 
